--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <title>Robota</title>
 </head>
 <body>
-    
+    <header id="site-header" class="transparent-header header-replace effect-one clr" data-height="54" itemscope="itemscope" itemtype="http://schema.org/WPHeader">
+        <div id="site-logo" class="clr has-responsive-logo" itemscope="" itemtype="http://schema.org/Brand">
+            <div id="site-navigation-wrap" class="clr">
+                <nav id="site-navigation" class="navigation main-navigation clr" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
+                    <ul id="menu-main-menu" class="main-menu dropdown-menu sf-menu sf-js-enabled" style="touch-action: pan-y;">
+                        <li id="menu-inicio" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2081 current_page_item menu-inicio">
+                            <a href="./index.html" class="menu-link">
+                                <span class="text-wrap">Início</span>
+                            </a>
+                        </li>
+                        <li id="menu-sobre" class="menu-item menu-item-type-post_type menu-item-object-page menu-sobre">
+                            <a href="./pages/about.html" class="menu-link">
+                                <span class="text-wrap">Sobre</span>
+                            </a>
+                        </li>
+                        <li id="menu-patrocinadores" class="menu-item menu-item-type-post_type menu-item-object-page menu-patrocinadores">
+                            <a href="./pages/patrocinadores.html" class="menu-link">
+                                <span class="text-wrap">Patrocinadores</span>
+                            </a>
+                        </li>
+                        <li id="menu-apoio" class="menu-item menu-item-type-post_type menu-item-object-page menu-apoio">
+                            <a href="/pages/apoio.html" class="menu-link">
+                                <span class="text-wrap">Nos Apoie</span>
+                            </a>
+                        </li>
+                        <li id="menu-contato" class="menu-item menu-item-type-post_type menu-item-object-page menu-contato">
+                            <a href="./pages/contact.html" class="menu-link">
+                                <span class="text-wrap">Contato</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <img src="/Images/robotalogo.png" alt="robota_logo">
+    </header>
 </body>
 </html>
